--- a/output/legend.tex
+++ b/output/legend.tex
@@ -1,7 +1,7 @@
             \documentclass{memoir}
             \usepackage{soul}
             \usepackage[paperwidth=6in, paperheight=9in,bindingoffset=.75in]{geometry}
-            \author{[Author list]}
+            \author{Written by GPT-4o mini\\Prompted by Gabriel Altay\\Arranged by Michael N. Gagnon}
             \title{\HUGE The Legend of Elara}
             \begin{document}
             \maketitle
